# adaptive-self-healing-rag

./: .env.example  .gitignore  README.md  pyproject.toml
.chainlit/: config.toml
data/: eval_dataset.json  eval_dataset_v2.json
data/knowledge_base/faqs/: account_management.md  contact_and_support_channels.md  gift_cards_and_vouchers.md  loyalty_rewards_program.md  orders_and_payments.md  product_information.md  promotions_and_coupons.md  reviews_and_ratings.md  subscriptions_and_shopease_plus.md
data/knowledge_base/policies/: bulk_and_business_orders.md  cancellation_policy.md  digital_products_policy.md  electronics_policy.md  fashion_and_apparel_policy.md  furniture_and_large_items_policy.md  perishables_and_grocery_policy.md  privacy_and_data.md  privacy_policy.md  refund_and_returns.md  shipping_policy.md  warranty_policy.md
data/knowledge_base/troubleshooting/: account_security.md  app_and_website_issues.md  delivery_issues.md  international_orders.md  order_modification.md  payment_failures.md  payment_methods.md  product_defects.md  (+3 more)
docs/: cost-analysis.md  design-decisions.md  engineering-challenges.md  evaluation.md  roadmap.md
scripts/: create_ls_dataset.py  evaluators.py  fetch_comparison.py  fetch_docs.py  ingest.py  run_ls_evals.py  smoke_test_traditional_rag.py  spot_check.py  test_doc_grader.py  test_hallucination_grader.py  test_router.py
src/: config.py  dependencies.py
src/api/: app.py  middleware.py  routes.py  schemas.py
src/core/: edges.py  graph_builder.py  naive_rag.py  prompts.py  state.py
src/providers/: bge_embeddings.py  chroma_store.py  groq_llm.py  interfaces.py
src/ui/: app.py
tests/: conftest.py  test_api.py  test_graph.py  test_nodes.py
(+7 files in other folders)
