[project]
name = "adaptive-rag-customer-support"
version = "0.1.0"
description = "Adaptive Self-Healing Customer Support RAG System for e-commerce"
requires-python = ">=3.10"
dependencies = [
    # Core orchestration
    "langgraph>=0.4,<1.0",
    "langchain-core>=0.3,<1.0",
    "langchain-text-splitters>=0.3,<1.0",   # RecursiveCharacterTextSplitter in ingest.py
    "langchain-community>=0.3,<1.0",         # TextLoader in ingest.py

    # LLM provider (Groq)
    "langchain-groq>=0.2,<1.0",

    # Vector store (raw chromadb — full control, no langchain-chroma abstraction)
    "chromadb>=0.5,<1.0",

    # Local CPU embeddings (BAAI/bge-small-en-v1.5 — 384-dim, ~133MB, <600MB RAM)
    "sentence-transformers>=3.0,<4.0",

    # API layer
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",

    # UI layer (>=2.9.4 required — earlier versions have high-severity CVEs)
    "chainlit>=2.9.4,<3.0",

    # HTTP utilities
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "httpx-sse>=0.4,<1.0",          # Required for Chainlit SSE stream consumption

    # Document loading
    "pypdf>=4.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27,<1.0",             # For FastAPI TestClient
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
